# AI_Agent_gongwen_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PROJECT_OVERVIEW.md  USER_GUIDE.md
drafts/: sample_draft.md
knowledge/: README.md
knowledge/exemplars/: sample_progress_report.md
knowledge/standards/: general_style_guide.md  progress_report_rules.md
knowledge/templates/: work_progress_template.md
outputs/: README.md
src/gov_writer_agent/: __init__.py  cli.py  config.py  loaders.py  models.py  openai_client.py  pipeline.py  prompts.py  retrieval.py
tests/: test_cli.py  test_loaders.py  test_retrieval.py
