[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-writer-agent"
version = "0.1.0"
description = "A starter project for polishing Chinese official reports with a local knowledge base and OpenAI models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gov-writer-agent = "gov_writer_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
